args parsing implementation

--- a/MultithreadGZip/MultithreadGZip.csproj
+++ b/MultithreadGZip/MultithreadGZip.csproj
@@ -59,6 +59,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GZipCommandLineArgs.cs" />
     <Compile Include="GZipCompressor.cs" />
     <Compile Include="IGZipCompressor.cs" />
     <Compile Include="Program.cs" />
