--- a/MultithreadGZip/App.config
+++ b/MultithreadGZip/App.config
@@ -1,6 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="MultithreadGZip.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         
     <supportedRuntime version="v2.0.50727"/></startup>
+    <userSettings>
+        <MultithreadGZip.Properties.Settings>
+            <setting name="BUFFER_SIZE" serializeAs="String">
+                <value>524288000</value>
+            </setting>
+            <setting name="THREADS_COUNT" serializeAs="String">
+                <value>4</value>
+            </setting>
+        </MultithreadGZip.Properties.Settings>
+    </userSettings>
 </configuration>
