--- a/MultithreadGZip/MultithreadGZip.csproj
+++ b/MultithreadGZip/MultithreadGZip.csproj
@@ -64,8 +64,10 @@
     <Compile Include="GZipCancellationTokenSource.cs" />
     <Compile Include="GZipCommandLineArgs.cs" />
     <Compile Include="GZipCompressor.cs" />
+    <Compile Include="GZipThread.cs" />
     <Compile Include="IGZipCancellationToken.cs" />
     <Compile Include="IGZipCompressor.cs" />
+    <Compile Include="IGzipThread.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
